GERONIMO-3834 Fix the permit leak when connections can't be created.  Simplify some of the pool code and add some pool tests for permit count and resizing
git-svn-id: https://svn.apache.org/repos/asf/geronimo/components/txmanager/trunk@620093 13f79535-47bb-0310-9956-ffa450edef68